# game-core-integrations

./: .gitignore  README.md  pyproject.toml
gc_integrations/config/: keys_config.py
gc_integrations/hltb/: client.py
gc_integrations/igdb/: client.py
gc_integrations/utils/: to_async.py
src/gc_integrations/: constants.py
src/gc_integrations/config/: __init__.py  keys_config.py
src/gc_integrations/hltb/client/: client.py
src/gc_integrations/igdb/client/: client.py
src/gc_integrations/utils/: to_async.py
tests/: common_keys.py  test_auth.py  test_hltb.py  test_igdb.py
