[tool.poetry]
name = "game-core-integrations"
version = "0.1.0"
description = "The integrations library for GameCore."
authors = ["Lamarcke <cassiolamarcksilvafreitas@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "src/gc_integrations" }]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
